@@ -45,6 +45,7 @@ struct SCIP_Stat
 {
    SCIP_Longint          nlpiterations;      /**< total number of LP iterations */
    SCIP_Longint          nrootlpiterations;  /**< total number of LP iterations in root node */
+   SCIP_Longint          nrootfirstlpiterations;/**< number of LP iterations for first LP solved at the root node */
    SCIP_Longint          nprimallpiterations;/**< number of iterations in primal simplex */
    SCIP_Longint          nduallpiterations;  /**< number of iterations in dual simplex */
    SCIP_Longint          nlexduallpiterations;/**< number of iterations in lexicographic dual simplex */
@@ -81,7 +82,7 @@ struct SCIP_Stat
    SCIP_Longint          nprobboundchgs;     /**< total number of bound changes generated in the tree during probing */
    SCIP_Longint          nprobholechgs;      /**< total number of hole changes generated in the tree  during probing */
    SCIP_Longint          nnodesbeforefirst;  /**< number of nodes before first primal solution */   
-   SCIP_Real             rootfirstlpbound;   /**< lower bound of root node computed by first LP solve (without cuts) */
+   SCIP_Real             firstlpdualbound;   /**< dual bound of root node computed by first LP solve (without cuts) */
    SCIP_Real             rootlowerbound;     /**< lower bound of root node */
    SCIP_Real             vsidsweight;        /**< current weight to use for updating VSIDS in history */
    SCIP_Real             firstprimalbound;   /**< objective value of first primal solution */
